tests/snapshots/relogin__a_yes_reaches_the_sandbox_refusal.snap
---
source: tests/relogin.rs
expression: r.stdout
---
switch: to profile `new`

observed:
  owned link     <HOME>/.config/hypr
  owned link     <HOME>/.config/foot
  absent         <HOME>/.config/btop

applying 9 operation(s):
  stage link   <HOME>/.config/hypr.rp-tmp-0 -> <HOME>/rice/new/hypr
  stage link   <HOME>/.config/foot.rp-tmp-1 -> <HOME>/rice/new/foot
  exchange     <HOME>/.config/hypr <-> <HOME>/.config/hypr.rp-tmp-0
  exchange     <HOME>/.config/foot <-> <HOME>/.config/foot.rp-tmp-1
  create link  <HOME>/.config/btop -> <HOME>/rice/new/btop
  to attic     <HOME>/.config/hypr.rp-tmp-0 -> <attic><HOME>/.config/hypr
  to attic     <HOME>/.config/foot.rp-tmp-1 -> <attic><HOME>/.config/foot
  fsync dir    <HOME>/.config
  fsync dir    <HOME>/.local/state/ricepilot/attic/<TS>

applied. this is generation 0001.

displaced links are in:
  <HOME>/.local/state/ricepilot/attic/<TS>
nothing was removed.

a blake3 manifest of the profile was recorded at:
  <HOME>/.local/state/ricepilot/manifests/new.toml
`ricepilot verify` compares against it.

to undo this:
  ricepilot rollback --commit            re-applies generation 0000
  sh <HOME>/.local/state/ricepilot/rescue.sh   the same thing, from a TTY, without ricepilot

this changed the filesystem, not the running session. log out and back in to see it:
  uwsm stop

never `hyprctl dispatch exit` and never kill Hyprland — `uwsm stop` is the clean
logout. if the session does not come back, TTY F2–F6 and run the rescue script above.

--relogin: every check passed.
  ok  switch   generation 0001 is current
  ok  journal  the switch's journal is retired: <HOME>/.local/state/ricepilot/journal/done-<TS>.toml
  ok  rescue   <HOME>/.local/state/ricepilot/rescue.sh restores generation 0000 and passes `sh -n`
  ok  links    3 link(s) are exactly what the plan said and what the ledger recorded
  ok  lock     this ricepilot holds <HOME>/.run/ricepilot.lock, and it is still the file at that path
  ok  session  WAYLAND_DISPLAY=wayland-1 is there in XDG_RUNTIME_DIR, uwsm's wayland-wm@hyprland.desktop.service is running,
               nothing says ssh, tmux or screen, and the controlling terminal was not looked at (test sandbox)

`uwsm stop` ends this session the clean way: every window closes, and anything unsaved
in them is lost. the login screen comes back, and the next login starts generation 0001.
if it does not come up, from a TTY (Ctrl+Alt+F2 … F6):
  sh <HOME>/.local/state/ricepilot/rescue.sh
log out now with `uwsm stop`? [y/N] yes
