tests/snapshots/relogin__refused_when_a_retired_destination_is_occupied_again.snap
---
source: tests/relogin.rs
expression: "shown(&d, &m.f)"
---

--relogin: not logging out. 1 of 6 check(s) did not pass:
  ok  switch   generation 0002 is current
  ok  journal  the switch's journal is retired: <HOME>/.local/state/ricepilot/journal/done-<TS>.toml
  ok  rescue   <HOME>/.local/state/ricepilot/rescue.sh restores generation 0001 and passes `sh -n`
  NO  links    <HOME>/.config/btop: the plan retired it into the attic, and it is a real directory
  ok  lock     this ricepilot holds <HOME>/.run/ricepilot.lock, and it is still the file at that path
  ok  session  inside a Wayland session (wayland-1) that uwsm manages: wayland-wm@hyprland.desktop.service is running

nothing was run. the switch itself is complete: generation 0002 is what the next login
starts. ricepilot ends a session only when every check above passes.
